[gd_scene load_steps=8 format=2]

[ext_resource path="res://Components/PickUps/Resources/ShieldPickUp.tres" type="Resource" id=1]
[ext_resource path="res://Imports/Sprites/PickUps/ShieldPickup.png" type="Texture" id=2]
[ext_resource path="res://Components/PickUps/Instanceable/PickUp.gd" type="Script" id=3]
[ext_resource path="res://Components/PickUps/Resources/ShieldPassiveParticles.tres" type="Material" id=4]
[ext_resource path="res://Components/PickUps/Resources/ShieldPassiveParticles2.tres" type="Material" id=5]
[ext_resource path="res://Components/PickUps/Resources/ShieldBurstParticles.tres" type="Material" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 22.9809

[node name="ShieldPickUp" type="Area2D" groups=[
"PickUps",
]]
position = Vector2( -217.091, -42.4744 )
z_index = 3
collision_layer = 0
script = ExtResource( 3 )
res = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.3382, 0.733657, 0.89, 1 )
texture = ExtResource( 2 )

[node name="PassiveParticles" type="Particles2D" parent="."]
amount = 32
process_material = ExtResource( 4 )

[node name="PassiveParticles2" type="Particles2D" parent="."]
amount = 32
process_material = ExtResource( 5 )

[node name="BurstParticles" type="Particles2D" parent="."]
emitting = false
amount = 96
lifetime = 0.5
one_shot = true
explosiveness = 0.82
process_material = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_PickUp_body_entered"]
